# os_stm32f429

./: .gitignore  CMakeLists.txt  OS.ioc  STM32F429IGTX_FLASH.ld  run.bat  stm32429i_eval_stlink.cfg
Core/Inc/: FreeRTOSConfig.h  dma2d.h  ltdc.h  main.h  rtc.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: dma.c  dma2d.c  fmc.c  freertos.c  gpio.c  i2c.c  ltdc.c  main.c  main.c.bak  rtc.c  sdio.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Gui/: Gui.guiguider
Gui/custom/: custom.c  custom.h
Gui/temp/: board.h  simulator.h
Gui2/: manual_ui.c  manual_ui.h
Gui_tmp/: Gui.guiguider
Gui_tmp/lvgl/: lvgl.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_core.c
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_storage_if.c
User/inc/: callback.h  command.h  delay.h  gui.h  my_task.h  sections.h  user.h
User/src/: callback.c  command.c  gui.c  my_task.c  user.c
Utils/Inc/: AHT10.h  DS18B20.h  WS2812B.h  at24c02.h  base.h  color_picker.h  gt911.h  lcd.h  lcd_spi_096.h  lv_file_explorer.h  lv_file_explorer_private.h  mpu6050.h  paint_board.h  qmc5883l.h  setting.h  utils.h
Utils/Src/: AHT10.c  DS18B20.c  WS2812B.c  at24c02.c  color_picker.c  delay.c  gt911.c  lcd.c  lcd_fonts.c  lcd_spi_096.c  lv_file_explorer.c  mpu6050.c  paint_board.c  qmc5883l.c  utils.c
lvgl/: CMakeLists.txt  build.bat  lv_conf.h  lvgl.h
lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c
lvgl/src/: lvgl_private.h
lvgl/src/core/: lv_obj_style.c
lvgl/src/font/: lv_binfont_loader.c  lv_binfont_loader.h  msyh.ttc
lvgl/src/misc/: lv_fs.c  lv_fs.h  lv_types.h
lvgl/src/themes/default/: lv_theme_default.c
tool/: config.yaml  replace_code.py  state.txt  test.py
tool/img_convert/: c_img_convert.py  convert.bat  img_convert.py
tool/lv_font_conv-master/: lv_font_conv.js  run.bat
